--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   dart_openai: ^5.1.0
-  chat_gpt_sdk: ^2.2.8
   hooks_riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
@@ -44,6 +43,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   flutter_hooks: ^0.20.5
   json_annotation: ^4.8.1
+  sqflite: ^2.3.2
+  chat_gpt_sdk: ^2.2.8
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,7 @@ flutter:
   assets:
     - assets/dev/
     - assets/file/
+    - assets/sql/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
