--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   json_annotation: ^4.8.1
   sqflite: ^2.3.2
   chat_gpt_sdk: ^2.2.8
+  stream_transform: ^2.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
