--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   chat_gpt_sdk: ^2.2.8
   stream_transform: ^2.1.0
   provider: ^6.1.2
+  dropdown_button2: ^2.3.9
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
