--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_core: ^2.27.0
   cloud_firestore: ^4.15.8
   shared_preferences: ^2.2.2
+  google_mobile_ads: ^5.0.0
 
 dev_dependencies:
   flutter_test:
