--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ firestore.rules
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 macos/Runner/GoogleService-Info.plist
+
+
+*.env
+*env.g.dart
