--- a/build.yaml
+++ b/build.yaml
@@ -1,11 +1,11 @@
-targets:
-  $default:
-    builders:
-      source_gen|combining_builder:
-        options:
-          build_extensions:
-            '^lib/model/{{}}.dart': 'lib/model/_generated/{{}}.g.dart'
-      freezed:
-        options:
-          build_extensions:
-            '^lib/model/{{}}.dart': 'lib/model/_generated/{{}}.freezed.dart'
+# targets:
+#   $default:
+#     builders:
+#       source_gen|combining_builder:
+#         options:
+#           build_extensions:
+#             '^lib/model/{{}}.dart': 'lib/model/_generated/{{}}.g.dart'
+#       freezed:
+#         options:
+#           build_extensions:
+#             '^lib/model/{{}}.dart': 'lib/model/_generated/{{}}.freezed.dart'
