--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   animated_splash_screen: ^1.3.0
   # 6.0.0以上に上げるとEnum型じゃなくなって厄介なので、5.0.2で止めておく。
   connectivity_plus: ^5.0.2
+  device_info_plus: ^10.1.0
+  flutter_dotenv: ^5.1.0
+  envied: ^0.5.4+1
+  share_plus: ^8.0.3
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +74,7 @@ dev_dependencies:
   riverpod_generator: ^2.4.0
   json_serializable: ^6.7.1
   freezed: ^2.4.7
+  envied_generator: ^0.5.4+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -87,6 +92,7 @@ flutter:
     - assets/dev/
     - assets/file/
     - assets/sql/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
