--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   flutter_dotenv: ^5.1.0
   envied: ^0.5.4+1
   share_plus: ^8.0.3
+  permission_handler: ^11.3.1
+  app_settings: ^5.1.1
+  app_tracking_transparency: ^2.0.5
 
 dev_dependencies:
   flutter_test:
