--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     </queries>
     <!-- ここまで -->
     <application
-        android:label="akinatorquiz"
+        android:label="Akinatorquiz"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data
