--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -19,7 +19,7 @@
 		<string>ja</string>
 	</array>
 	<key>CFBundleName</key>
-	<string>akinatorquiz</string>
+	<string>Akinatorquiz</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
