--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,6 +15,12 @@ allprojects {
         google()
         mavenCentral()
     }
+    //　以下を追加
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
