--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,11 +66,11 @@ dependencies:
 
 flutter_icons:
   ios: true
-  image_path: "assets/file/app_icon.PNG"
-  remove_alpha_ios: true
+  image_path: "assets/file/app_icon2.jpg"
+  # remove_alpha_ios: true
   android: true
-  adaptive_icon_background: "assets/file/app_icon.PNG"
-  adaptive_icon_foreground: "assets/file/app_icon.PNG"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/file/app_icon2.jpg"
 
 dev_dependencies:
   flutter_test:
